<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinishActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/game_name"
        android:scaleType="centerCrop"
        android:scaleX="1"

        android:scaleY="1"
        android:src="@drawable/character3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="50sp"
            android:background="@drawable/bg_setting2"
            android:text="@string/end" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/bg_setting"
            android:gravity="center_horizontal"
            >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/result"
                    android:textSize="50sp" android:textColor="@color/White"
                    />
            <TextView
                android:id="@+id/txtfinCorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correct"
                android:textSize="50sp"
                android:textColor="@color/White"
                android:layout_marginTop="30dp"
                />
            <TextView
                android:id="@+id/txtfinWrong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wrong"
                android:textSize="50sp"
                android:textColor="@color/White"
                android:layout_marginTop="30dp"
                />
            <TextView
                android:id="@+id/txtfinTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="30sp"
                android:textColor="@color/White"
                android:layout_marginTop="30dp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/MediumAquamarine"
                android:textSize="30sp"
                android:text="@string/continue_str"
                app:icon="@drawable/plat24"
                android:id="@+id/btnfinContinue"
                />
            <Button
                android:id="@+id/btnfinBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/Chocolate"
                android:textSize="30sp"
                android:text="@string/back_to_main_page"
                app:icon="@drawable/plat24" />






        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>