<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:contentDescription="@string/game_name"
        android:scaleType="centerCrop"
        android:scaleX="1"


        android:scaleY="1"

        android:src="@drawable/character3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </ImageView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@+id/main"
        app:layout_constraintBottom_toBottomOf="@+id/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/White"

            android:fontFamily="sans-serif-light"

            android:text="@string/game_name"
            android:textColor="@color/Black"
            android:textSize="30sp"


            android:textStyle="bold"


            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnPlay"
            android:layout_width="182dp"
            android:layout_height="82dp"
            android:layout_marginTop="28dp"
            android:text="@string/play"

            android:textSize="26sp"
            app:icon="@drawable/plat24" />

        <!--<Button
            android:id="@+id/btnGallery"
            android:layout_width="182dp"
            android:layout_height="82dp"
            android:layout_marginTop="30dp"
            android:text="@string/gallery"
            android:backgroundTint="@color/Purple"
            android:textSize="26sp"/>-->

        <Button
            android:id="@+id/btnLeaderboard"
            android:layout_width="182dp"
            android:layout_height="82dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/Chocolate"
            android:text="@string/leaderboard"
            android:textSize="16sp"
            app:icon="@drawable/flag24" />
        <Button
            android:id="@+id/btnRecord"
            android:layout_width="182dp"
            android:layout_height="82dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/CornflowerBlue"
            android:text="@string/your_record"
            android:textSize="16sp"
            app:icon="@drawable/list24" />


        <Button
            android:id="@+id/btnMainLeave"
            android:layout_width="182dp"
            android:layout_height="82dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/DarkRed"
            android:text="@string/leave"
            android:textSize="16sp"
            app:icon="@drawable/arrow_back" />


    </LinearLayout>

    <Button
        android:id="@+id/btnSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Gray"
        android:drawablePadding="6dp"

        android:drawableTint="#ff0000"
        android:text="@string/setting"
        android:textColor="@color/Azure"
        android:visibility="visible"
        app:cornerRadius="20dp"
        app:icon="@drawable/gear"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>
























