<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LeaderboardActivity"

    >

    <ImageView
        android:id="@+id/imgLeaderboard"
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:contentDescription="@string/game_name"
        android:scaleType="centerCrop"
        android:scaleX="1"


        android:scaleY="1"

        android:src="@drawable/character3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

    </ImageView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        >
        <TextView

            android:id="@+id/txtLeaderboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_setting2"
            android:padding="6dp"
            android:text="@string/leaderboard"
            android:textColor="@color/Black"
            android:textSize="40sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="99"
            android:background="@drawable/bg_leaderboard_header"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:layout_weight="33"
                android:text="@string/leader_header_name"
                android:textColor="@color/White"
                android:textAlignment="center"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:layout_weight="33"
                android:text="@string/leader_header_correct"
                android:textColor="@color/White"
                android:textAlignment="center"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:layout_weight="33"
                android:text="@string/leader_header_time"
                android:textColor="@color/White"
                android:textAlignment="center"
                />

        </LinearLayout>
        <GridView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_setting"
            android:id="@+id/gridLeader"
            android:numColumns="1"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:smoothScrollbar="true"

            />




    </LinearLayout>




    <!--
    android:background="@drawable/bg_setting"
    -->
</androidx.constraintlayout.widget.ConstraintLayout>